<resources>
    <!-- TODO: Mark which thing is not needed for translation-->
    <string name="app_name">Exchange</string>

    <string name="content_authority">com.jacintochen.currencyexchange.data.ExchangeProvider</string>

    <!-- Main Activity Fragment strings-->
    <!-- Keys for calculator's member values-->
    <string name="main_pref_values">main_pref_values</string>
    <string name="mcurrency_position">mCurrency_Position</string>
    <string name="position_one">one</string>
    <string name="position_two">two</string>

    <!--Starting currency-->
    <string name="start_currency">USD:</string>
    <string name="start_currency_hint">0</string>

    <!--Ending currency-->
    <string name="bank">Bank</string>
    <string name="market">Market</string>
    <string name="exchange_rate">Rate</string>
    <string name="rate">#</string>

    <string name="end_currency">Peso</string>
    <string name="temp_bank_rate">14</string>
    <string name="rate_separator">/</string>
    <string name="temp_market_rate">15</string>
    <string name="rate_direction">ic_arrow_drop_up_black_18dp</string>
    <string name="temp_difference_rate">--</string>

    <string name="end_currency_hint">0</string>

    <!--Button's text-->
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>
    <string name="button_decimal">.</string>

    <string name="button_clear">C</string>
    <string name="button_back">BS</string>
    <string name="button_switch">S</string>
    <string name="button_equal">=</string>

    <string name="action_settings">Settings</string>

    <!-- End of Main Activity Fragment Strings-->

    <!-- Sell Activity & Fragment strings -->
    <string name="menu_sell">Sell</string>
    <string name="title_activity_sell">SELL</string>
    <string name="currency_1">Foreign Currency</string>
    <string name="buy_rate">Buy Rate</string>
    <string name="sell_rate">Sell Rate</string>
    <string name="currency_2">Home Currency</string>
    <string name="currency_2_hint">Value return </string>
    <string name="temp_zero">0</string>
    <string name="calculate">Calculate</string>
    <string name="selling_cost">Gain/Lost</string>
    <string name="selling_cost_hint">In Home Currency</string>
    <string name="sell_foreign_error">Enter the amount to exchange</string>
    <string name="sell_buy_error">Enter the purchasing rate of the foreign currency</string>
    <string name="sell_sell_error">Enter the selling rate of the foreign currency</string>

    <!-- Saved currency list string -->
    <string name="menu_saved">Saved Currency List</string>
    <string name="title_activity_currency_list">Exchange List</string>
    <string name="list_add_button_title">Add New Exchange</string>
    <!-- Card view strings -->
    <string name="alertdialog_delete">Delete Exchange?</string>
    <string name="delete">delete</string>

    <!-- Add Activity & Fragment strings -->
    <string name="menu_add">Add New Exchange</string>
    <string name="title_activity_add">Add New Exchange</string>
    <string name="add_currency_1">Currency 1</string>
    <string name="add_currency_2">Currency 2</string>
    <string name="add_bank_rate">Bank Rate</string>
    <string name="add_market_rate">Market Rate</string>
    <string name="add_add_button">Add</string>
    <string name="add_cancel_button">Cancel</string>
    <string name="add_saved_message">Saved Successful</string>
    <string name="add_currency_error">Enter name of currency</string>
    <string name="add_bank_error">Enter your purchased exchange rate</string>
    <string name="add_market_error">Enter current market exchange rate</string>


    <!-- String for Testing-->
    <string name="test_USD">USD99999</string>
    <string name="test_EURO">EURO9999</string>
    <string name="test_error">Testing for error information right now testing!</string>


</resources>
