<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jacintochen.currencyexchange.SellActivityFragment">

    <!-- TODO: Add something that would lose focus when done is pressed-->
    <!-- TODO: have custom edittext box maybe a dark grey box -->
    <!-- Line 1 -->
    <TextView
        android:id="@+id/currency_1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/currency_1"
        android:textSize="22sp"/>


    <!-- Line 2 -->
    <TextView
        android:id="@+id/currency_1_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temp_hint"
        android:layout_below="@id/currency_1_title"
        android:gravity="right"
        android:textSize="22sp"/>

    <!-- Line 3 -->

    <TextView
        android:id="@+id/buy_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_rate"
        android:layout_below="@id/currency_1_edittext"
        android:textSize="22sp"/>

    
    <TextView
        android:id="@+id/buy_rate_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/temp_hint"
        android:layout_below="@id/currency_1_edittext"
        android:layout_toRightOf="@id/buy_rate_title"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:textSize="22sp"/>

    <!-- Line 4 -->
    <TextView
        android:id="@+id/sell_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell_rate"
        android:layout_below="@id/buy_rate_edittext"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/sell_rate_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/temp_hint"
        android:layout_below="@id/buy_rate_edittext"
        android:layout_toRightOf="@id/sell_rate_title"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:textSize="22sp"/>

    <!-- Line 5 -->
    <TextView
        android:id="@+id/currency_2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sell_rate_edittext"
        android:layout_alignParentLeft="true"
        android:text="@string/currency_2"
        android:textSize="22sp"/>


    <!-- Line 6 -->
    <TextView
        android:id="@+id/currency_2_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temp_hint"
        android:layout_below="@id/currency_2_title"
        android:gravity="right"
        android:textSize="22sp"/>

    <!-- Line 7 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currency_2_textview"
        android:text="@string/selling_cost"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currency_2_textview"
        android:layout_alignParentRight="true"
        android:text="@string/selling_cost_text"
        android:textSize="22sp"/>

    <!-- Line end -->
    <Button
        android:id="@+id/sell_calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_alignParentBottom="true"
        android:textSize="22sp"/>

</RelativeLayout>
